--- a/.screenrc
+++ b/.screenrc
@@ -13,10 +13,12 @@ bind - resize -1
 bind _ resize max
 
 # Hotkets for switching
-bindkey "^[[D" prev
+bindkey "^[[A" copy
 bindkey "^[[C" next
-bindkey "^[[1;5D" prev
+bindkey "^[[D" prev
+bindkey "^[[1;5A" copy
 bindkey "^[[1;5C" next
+bindkey "^[[1;5D" prev
 
 altscreen on # erase screen when quit apps
 defutf8 on
