--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim/bundle/javascript"]
 	path = vim/bundle/javascript
 	url = git://github.com/pangloss/vim-javascript.git
+[submodule "vim/bundle/php.syntax"]
+	path = vim/bundle/php.syntax
+	url = git://github.com/StanAngeloff/php.vim.git
