Changed commit email info.

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
 	ui = auto
 [user]
 	name = Iblis Lin
-	email = iblis@hs.ntnu.edu.tw
+	email = e196819@hotmail.com
 [alias]
 	ci = commit
 	co = checkout
