--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = vim/bundle/vundle
 	url = git://github.com/gmarik/vundle.git
 [submodule "vim/bundle/emmet-vim"]
-	path = vim/bundle/zencoding
+	path = vim/bundle/emmet-vim
 	url = git://github.com/mattn/emmet-vim.git
 [submodule "vim/bundle/supertab"]
 	path = vim/bundle/supertab
