--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vim/bundle/pep8"]
 	path = vim/bundle/pep8
 	url = https://github.com/vim-scripts/pep8.git
+[submodule "vim/bundle/pyCalltips"]
+	path = vim/bundle/pyCalltips
+	url = https://github.com/vim-scripts/python_calltips.git
