--- a/.screenrc
+++ b/.screenrc
@@ -1,5 +1,5 @@
 # Status line
-backtick 0 0 0 sh -c "screen -ls | grep \$PPID | awk '{print \$1}'"
+backtick 0 0 0 sh -c "screen -ls | grep \$PPID | awk '{print \$1}' | sed 's/\^[0-9]*\.//'"
 caption always "%{.KW} %-w%{.mW}[%n] %t%{.KW}%+w"
 hardstatus alwayslastline "%{R}[%{w} %0` %{R}]%=%{M}%e %{G}%H %{Y}%A%C:%s %{R} %Y/%m/%d %{K} Load: %l %{B}%{w}"
 
