--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vim/bundle/taglist"]
 	path = vim/bundle/taglist
 	url = https://github.com/vim-scripts/taglist.vim.git
+[submodule "vim/bundle/js-lib-syntax"]
+	path = vim/bundle/js-lib-syntax
+	url = https://github.com/othree/javascript-libraries-syntax.vim.git
