--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vim/bundle/js-lib-syntax"]
 	path = vim/bundle/js-lib-syntax
 	url = https://github.com/othree/javascript-libraries-syntax.vim.git
+[submodule "vim/bundle/vim-css3-syntax"]
+	path = vim/bundle/vim-css3-syntax
+	url = https://github.com/hail2u/vim-css3-syntax.git
