--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "vim/bundle/vim-css3-syntax"]
 	path = vim/bundle/vim-css3-syntax
 	url = https://github.com/hail2u/vim-css3-syntax.git
+[submodule "vim/bundle/nodejs-complete"]
+	path = vim/bundle/nodejs-complete
+	url = https://github.com/myhere/vim-nodejs-complete.git
