Change remote for vimpager

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,7 +18,7 @@
 	url = git://github.com/StanAngeloff/php.vim.git
 [submodule "vimpager"]
 	path = vimpager
-	url = git@github.com:iblis17/vimpager.git
+	url = https://github.com/iblis17/vimpager.git
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
 	url = git://github.com/scrooloose/nerdtree.git
