--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim/bundle/ultisnips"]
 	path = vim/bundle/ultisnips
 	url = https://github.com/iblis17/ultisnips.git
+[submodule "vim/bundle/renumber.vim"]
+	path = vim/bundle/renumber.vim
+	url = https://github.com/vim-scripts/renumber.vim.git
