--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,9 @@
 [submodule "vim/bundle/renumber.vim"]
 	path = vim/bundle/renumber.vim
 	url = https://github.com/vim-scripts/renumber.vim.git
+[submodule "vim/bundle/airline"]
+	path = vim/bundle/airline
+	url = https://github.com/bling/vim-airline.git
+[submodule "vim/bundle/gitgutter"]
+	path = vim/bundle/gitgutter
+	url = https://github.com/airblade/vim-gitgutter.git
