New submodule: vim-go

--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "vim/bundle/signature"]
 	path = vim/bundle/signature
 	url = https://github.com/kshenoy/vim-signature.git
+[submodule "vim/bundle/vim-go"]
+	path = vim/bundle/vim-go
+	url = git@github.com:fatih/vim-go.git
