--- a/.gitmodules
+++ b/.gitmodules
@@ -87,7 +87,7 @@
 	url = https://github.com/kshenoy/vim-signature.git
 [submodule "vim/bundle/vim-go"]
 	path = vim/bundle/vim-go
-	url = git@github.com:fatih/vim-go.git
+	url = https://github.com/fatih/vim-go.git
 [submodule "vim/bundle/jst"]
 	path = vim/bundle/jst
 	url = https://github.com/briancollins/vim-jst.git
