--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,4 +8,4 @@ bind -n M-w choose-window
 set-window-option -g xterm-keys on
 
 set -s escape-time 0
-set -s default-terminal xterm-256color
+set -gs default-terminal xterm-256color
