--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,3 +9,19 @@ set-window-option -g xterm-keys on
 
 set -s escape-time 0
 set -gs default-terminal xterm-256color
+
+set -g status-utf8 on
+
+
+# window status bar
+set -g window-status-format "#I:#W"
+
+# current window status bar
+set-window-option -g window-status-current-fg green
+set-window-option -g window-status-current-bg black
+set-window-option -g window-status-current-attr underscore
+set -g window-status-current-format "#I #W"
+
+# status line
+set -g status-left ""
+set -g status-right "#h"
