Add screen options

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -9,3 +9,4 @@ devel_cmake_UNSET += MANPAGES
 devel_git_UNSET = CONTRIB PERL ETCSHELLS
 editors_vim_UNSET += CSCOPE DEFAULT_VIMRC NLS RUBY TCL LUA GTK2
 editors_vim_SET += CONSOLE
+sysutils_screen_SET += SHOWENC
