--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,12 @@ bind -n S-Left previous-window
 bind -n M-j previous-window
 
 bind -n M-w choose-window
+bind -n M-q command-prompt "find-window -N '%%'"
+
+bind-key -r n swap-window -t +
+bind-key -r p swap-window -t -
+
+bind-key k kill-window
 
 set-window-option -g xterm-keys on
 
