Exclude PERL for vim

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -7,7 +7,7 @@ OPTIONS_UNSET += DOCS X11
 
 devel_cmake_UNSET += MANPAGES
 devel_git_UNSET = CONTRIB PERL ETCSHELLS
-editors_vim_UNSET += CSCOPE DEFAULT_VIMRC NLS RUBY TCL LUA GTK2
+editors_vim_UNSET += CSCOPE DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
 editors_vim_SET += CONSOLE
 ports-mgmt_portmaster_SET += ZSH
 sysutils_screen_SET += SHOWENC
