--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ bind -n M-j previous-window
 
 bind -n M-w choose-window
 bind -n M-q command-prompt "find-window -N '%%'"
+bind -n M-e split-window -dh ipython
 
 bind-key -r n swap-window -t +
 bind-key -r p swap-window -t -
