Change color for tmux inner

--- a/.tmux-inner.conf
+++ b/.tmux-inner.conf
@@ -5,4 +5,16 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+# bindkey
 bind a send-keys C-a
+
+unbind -n S-Right
+unbind -n S-Left
+bind -n C-Right next-window
+bind -n C-Left previous-window
+
+# status bar
+set -g status-fg colour15 # bold white
+set -g status-bg colour240 # gray
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg colour10
