--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,7 @@ set -g status-utf8 on
 
 # window status bar
 set -g window-status-format "#I:#W"
+set -g status-bg colour10
 
 # current window status bar
 set-window-option -g window-status-current-fg green
