Add bindkey for change titile

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,8 @@ bind-key -r p swap-window -t -
 
 bind-key k kill-window
 
+bind-key A command-prompt "rename-window '%%'"
+
 set-window-option -g xterm-keys on
 
 set -s escape-time 0
