Add bindkey for screen-like behavior

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,27 @@
-bind -n S-Right next-window
-bind -n M-k next-window
-bind -n S-Left previous-window
-bind -n M-j previous-window
+bind-key -n S-Right  next-window
+bind-key -n M-k      next-window
+bind-key -n S-Left   previous-window
+bind-key -n M-j      previous-window
+bind-key -n M-c      clock-mode
 
-bind -n M-w choose-window
-bind -n M-q command-prompt "find-window -N '%%'"
-bind -n M-e split-window -dh ipython
+bind-key -n M-w choose-window
+bind-key -n M-q command-prompt "find-window -N %%"
+bind-key -n M-e split-window -dh ipython
 
 bind-key -r n swap-window -t +
 bind-key -r p swap-window -t -
 
-bind-key k kill-window
-
-bind-key A command-prompt "rename-window '%%'"
+bind-key A      command-prompt "rename-window %%"
+bind-key C-A    command-prompt "rename-window %%"
+bind-key C-a    last-window
+bind-key C-c    new-window
+bind-key k      kill-window
+bind-key C-k    kill-window
+bind-key '|'    split-window -h
+bind-key -      split-window -v
+bind-key C-[    copy-mode
+bind-key C-]    paste-buffer
+bind-key -n C-] paste-buffer
 
 set-window-option -g xterm-keys on
 
