--- a/.tmux-inner.conf
+++ b/.tmux-inner.conf
@@ -18,3 +18,5 @@ set -g status-fg colour15 # bold white
 set -g status-bg colour240 # gray
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg colour10
+set -g status-right "#[fg=yellow,bold]#S#[default]#[fg=white,bold]@#h #[fg=green,bold]#(uptime | sed -e 's/^.*average: //' -e 's/,//g' | awk '{ print $1 }')"
+set -g status-interval 1
