Add copy-mode for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,7 @@ bind-key C-k    kill-window
 bind-key '|'    split-window -h
 bind-key -      split-window -v
 bind-key C-[    copy-mode
+bind-key '^['   copy-mode
 bind-key C-]    paste-buffer
 bind-key -n C-] paste-buffer
 
