Fix some bindkey

--- a/.tmux-inner.conf
+++ b/.tmux-inner.conf
@@ -8,6 +8,8 @@ bind C-a send-prefix
 # bindkey
 bind a send-keys C-a
 
+bind-key C-a    last-window
+
 unbind -n S-Right
 unbind -n S-Left
 bind -n C-Right next-window
