Add bindkey for last-window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+# binkey
 bind-key -n S-Right  next-window
 bind-key -n M-k      next-window
 bind-key -n S-Left   previous-window
@@ -7,6 +8,7 @@ bind-key -n M-c      clock-mode
 bind-key -n M-w choose-window
 bind-key -n M-q command-prompt "find-window -N %%"
 bind-key -n M-e split-window -dh ipython
+bind-key -n M-a last-window
 
 bind-key -r n swap-window -t +
 bind-key -r p swap-window -t -
