--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,7 @@ bind-key -r p swap-window -t -
 bind-key A      command-prompt "rename-window %%"
 bind-key C-a    last-window
 bind-key C-c    new-window
+bind-key C-d    detach-client
 bind-key k      kill-window
 bind-key C-k    kill-window
 bind-key '|'    split-window -h
