Add bind key to change window in tmux-inner

--- a/.tmux-inner.conf
+++ b/.tmux-inner.conf
@@ -12,8 +12,10 @@ bind-key C-a    last-window
 
 unbind -n S-Right
 unbind -n S-Left
-bind -n C-Right next-window
-bind -n C-Left previous-window
+bind-key -n C-Right  next-window
+bind-key -n C-Left   previous-window
+bind-key -n M-k      next-window
+bind-key -n M-j      previous-window
 
 # status bar
 set -g status-fg colour15 # bold white
