--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # binkey
 bind-key -n S-Right  next-window
-bind-key -n M-k      next-window
 bind-key -n S-Left   previous-window
-bind-key -n M-j      previous-window
+bind-key -n C-M-k    next-window
+bind-key -n C-M-j    previous-window
 bind-key -n M-c      clock-mode
 
 bind-key -n M-w choose-window
