--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,7 @@ bind-key '^['   copy-mode
 bind-key C-]    paste-buffer
 bind-key -n C-] paste-buffer
 
+set -g default-terminal "rxvt-256color"
 set-window-option -g xterm-keys on
 
 set -s escape-time 0
