Add tmux key binding for ipython and zdict

--- a/.tmux-inner.conf
+++ b/.tmux-inner.conf
@@ -12,10 +12,13 @@ bind-key C-a    last-window
 
 unbind -n S-Right
 unbind -n S-Left
+unbind -n M-e
 bind-key -n C-Right  next-window
 bind-key -n C-Left   previous-window
 bind-key -n M-k      next-window
 bind-key -n M-j      previous-window
+bind-key -n M-e      split-window -h ipython
+bind-key -n M-z      split-window -h zdict
 
 # status bar
 set -g status-fg colour15 # bold white
