--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,6 @@ bind-key -n M-c      clock-mode
 
 bind-key -n M-w choose-window
 bind-key -n M-q command-prompt "find-window -N %%"
-bind-key -n M-e split-window -dh ipython
 bind-key -n M-a last-window
 
 bind-key -r n swap-window -t +
@@ -26,7 +25,7 @@ bind-key '^['   copy-mode
 bind-key C-]    paste-buffer
 bind-key -n C-] paste-buffer
 
-set -g default-terminal "rxvt-256color"
+set -g default-terminal "screen-256color"
 set-window-option -g xterm-keys on
 
 set -s escape-time 0
