--- a/i3/config
+++ b/i3/config
@@ -66,7 +66,7 @@ bindsym $mod+odiaeresis focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
-bindsym $mod+Down focus down
+# bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
@@ -75,6 +75,9 @@ bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+odiaeresis move right
+
+# move focused workspace
+bindsym $mod+Down exec ~/.i3/bin/choutput.py
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -126,14 +129,14 @@ bindsym $mod+Shift+s sticky toggle
 default_orientation horizontal
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
+bindsym $mod+1 workspace 1:α
+bindsym $mod+2 workspace 2:β
+bindsym $mod+3 workspace 3:ξ
+bindsym $mod+4 workspace 4:δ
+bindsym $mod+5 workspace 5:ε
+bindsym $mod+6 workspace 6:φ
+bindsym $mod+7 workspace 7:γ
+bindsym $mod+8 workspace 8:θ
 
 #navigate workspaces next / previous
 # bindsym $mod+Ctrl+Right workspace next
@@ -162,6 +165,25 @@ bindsym $mod+Shift+5 move container to workspace number 5; workspace 5
 bindsym $mod+Shift+6 move container to workspace number 6; workspace 6
 bindsym $mod+Shift+7 move container to workspace number 7; workspace 7
 bindsym $mod+Shift+8 move container to workspace number 8; workspace 8
+
+# rename workspaces
+rename workspace to 1:α
+rename workspace to 2:β
+rename workspace to 3:ξ
+rename workspace to 4:δ
+rename workspace to 5:ε
+rename workspace to 6:φ
+rename workspace to 7:γ
+rename workspace to 8:θ
+
+rename workspace 11 to 11:α
+rename workspace 12 to 12:β
+rename workspace 13 to 13:ξ
+rename workspace 14 to 14:δ
+rename workspace 15 to 15:ε
+rename workspace 16 to 16:φ
+rename workspace 17 to 17:γ
+rename workspace 18 to 18:θ
 
 # Open applications on specific workspaces
 # assign [class="Thunderbird"] 1
