Add alias for cherry-pick

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,7 @@
 [alias]
 	ci = commit -v
 	co = checkout
+    cp = cherry-pick
 	df = diff
 	st = status
 	lg = log --abbrev-commit --name-status --graph
