--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,7 @@
     df = diff
     st = status
     lg = log --abbrev-commit --name-status --graph
+    lgl = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
     unstage = reset HEAD --
 [push]
     default = matching
