--- a/.gitconfig
+++ b/.gitconfig
@@ -13,9 +13,11 @@
     df = diff
     st = status
     lg = log --abbrev-commit --name-status --graph
-    lgl = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
+    tree = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
+    # tree = log --graph --pretty=oneline --abbrev-commit
+    loog = log --pretty=full
+    looog = log --pretty=fuller
     unstage = reset HEAD --
-    tree = log --graph --pretty=oneline --abbrev-commit
 [push]
     default = matching
 [merge]
