--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,7 @@ set-window-option -g xterm-keys on
 
 set -s escape-time 0
 
-set -g status-utf8 on
+# set -g status-utf8 on
 
 
 # window status bar
