--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -11,3 +11,5 @@ editors_vim_UNSET += CSCOPE DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
 editors_vim_SET += CONSOLE
 ports-mgmt_portmaster_SET += ZSH
 sysutils_screen_SET += SHOWENC
+
+CPUTYPE ?= native
