[bsd] add sqlite option JSON1 to make.conf

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -5,6 +5,7 @@
 
 OPTIONS_UNSET += DOCS X11
 
+databases_sqlite3 += JSON1
 devel_cmake_UNSET += MANPAGES
 devel_git_UNSET = CONTRIB PERL ETCSHELLS
 editors_vim_UNSET += CSCOPE DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
