[bsd] add curl option in make.conf

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -5,7 +5,8 @@
 
 OPTIONS_UNSET += DOCS X11
 
-databases_sqlite3 += JSON1
+databases_sqlite3_SET += JSON1
+ftp_curl_SET += HTTP2 LIBSSH2
 devel_cmake_UNSET += MANPAGES
 devel_git_UNSET = CONTRIB PERL ETCSHELLS
 editors_vim_UNSET += CSCOPE DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
