--- a/.tmux.deluge.conf
+++ b/.tmux.deluge.conf
@@ -1,7 +1,7 @@
 rename-window -t 0 daemon
-new-window -t 1 -n rm-tor
+new-window -t 1 -n "rm-tor"
 new-window -t 2
-new-window -t 3 -n feed deluge-console
+new-window -t 3 -n fly deluge-console
 new-window -t 4 -n music deluge-console
 new-window -t 5 -n dl deluge-console
 new-window -t 6
@@ -29,7 +29,7 @@ split-window -h -t 2
 split-window -h -t 2
 
 send-keys -t 0 "cd /home/iblis/gdrive/" Enter
-send-keys -t 0 "/home/iblis/venv/deluge/bin/python ./feed.py" Enter
+send-keys -t 0 "/home/iblis/venv/deluge/bin/python ./feedly.py" Enter
 
 send-keys -t 1 "cd /home/iblis/gdrive" Enter
 send-keys -t 1 "/home/iblis/venv/deluge/bin/python ./music.py" Enter
