--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -6,11 +6,12 @@
 OPTIONS_UNSET += DOCS X11
 
 databases_sqlite3_SET += JSON1
-ftp_curl_SET += HTTP2 LIBSSH2
 devel_cmake_UNSET += MANPAGES
 devel_git_UNSET = CONTRIB PERL ETCSHELLS
-editors_vim_UNSET += CSCOPE DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
 editors_vim_SET += CONSOLE
+editors_vim_UNSET += CSCOPE DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
+ftp_curl_SET += HTTP2 LIBSSH2
+net_mosquitto_SET += WS
 ports-mgmt_portmaster_SET += ZSH
 sysutils_screen_SET += SHOWENC
 
