make.conf: openblas

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -11,6 +11,7 @@ devel_git_UNSET = CONTRIB PERL ETCSHELLS
 editors_vim_SET += CONSOLE
 editors_vim_UNSET += CSCOPE DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
 ftp_curl_SET += HTTP2 LIBSSH2
+math_openblas_SET += AVX AVX2 INTERFACE64 OPENMP
 net_mosquitto_SET += WS
 ports-mgmt_portmaster_SET += ZSH
 sysutils_screen_SET += SHOWENC
