--- a/.tmux.deluge.conf
+++ b/.tmux.deluge.conf
@@ -1,5 +1,5 @@
 rename-window -t 0 daemon
-new-window -t 1 -n "rm-tor"
+new-window -t 1 -n 'rm-tor'
 new-window -t 2
 new-window -t 3 -n fly deluge-console
 new-window -t 4 -n music deluge-console
