--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -14,6 +14,7 @@ ftp_curl_SET += HTTP2 LIBSSH2
 math_openblas_SET += AVX AVX2 INTERFACE64 OPENMP
 net_mosquitto_SET += WS
 ports-mgmt_portmaster_SET += ZSH
+security_cryptopp_SET += SIMD
 sysutils_screen_SET += SHOWENC
 
 CPUTYPE ?= native
