--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,7 @@
     cp = cherry-pick
     df = diff
     st = status
+    s = status
     lg = log --abbrev-commit --name-status --graph
     tree = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
     # tree = log --graph --pretty=oneline --abbrev-commit
