--- a/.tmux.deluge.conf
+++ b/.tmux.deluge.conf
@@ -19,7 +19,7 @@ send-keys -t 1 "/home/iblis/venv/deluge/bin/python /home/iblis/code/deluge/dclie
 select-window -t 1
 split-window -h -t 1
 send-keys -t 0 "deluge-console" Enter
-send-keys -t 1 "/home/iblis/venv/deluge/bin/python /home/iblis/gdrive/del.py" Enter
+send-keys -t 1 "/home/iblis/venv/deluge/bin/python /home/iblis/code/deluge/del.py" Enter
 select-pane -t 0
 
 
