--- a/.tmux.deluge.conf
+++ b/.tmux.deluge.conf
@@ -28,7 +28,7 @@ select-window -t 2
 split-window -h -t 2
 split-window -h -t 2
 
-send-keys -t 0 "cd /home/iblis/gdrive/" Enter
+send-keys -t 0 "cd /home/iblis/code/deluge" Enter
 send-keys -t 0 "/home/iblis/venv/deluge/bin/python ./feedly.py" Enter
 
 send-keys -t 1 "cd /home/iblis/gdrive" Enter
