tmux: allow rename

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ set -g default-terminal "screen-256color"
 set-window-option -g xterm-keys on
 
 set -s escape-time 0
-
+set -g allow-rename on
 
 
 # window status bar
