--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -7,15 +7,17 @@ OPTIONS_UNSET += DOCS X11
 
 databases_sqlite3_SET += JSON1
 devel_cmake_UNSET += MANPAGES
-devel_git_UNSET = CONTRIB PERL ETCSHELLS
-editors_vim_SET += CONSOLE
-editors_vim_UNSET += CSCOPE DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
+devel_git_SET += PCRE2
+devel_git_UNSET = CONTRIB CVS GITWEB SEND_EMAIL P4 ETCSHELLS PCRE
+editors_vim_SET += CSCOPE CONSOLE PYTHON3
+editors_vim_UNSET += DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
 ftp_curl_SET += HTTP2 LIBSSH2
 math_openblas_SET += AVX AVX2 INTERFACE64 OPENMP
 net_mosquitto_SET += WS
 ports-mgmt_portmaster_SET += ZSH
 security_cryptopp_SET += SIMD
 sysutils_screen_SET += SHOWENC
+sysutils_tmux_SET += BACKSPACE
 
 CPUTYPE ?= native
 
