freebsd: make options

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -9,10 +9,12 @@ databases_sqlite3_SET += JSON1
 devel_cmake_UNSET += MANPAGES
 devel_git_SET += PCRE2
 devel_git_UNSET = CONTRIB CVS GITWEB SEND_EMAIL P4 ETCSHELLS PCRE
+editors_libreoffice_SET += GTK3
 editors_vim_SET += CSCOPE CONSOLE PYTHON3
 editors_vim_UNSET += DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
 ftp_curl_SET += HTTP2 LIBSSH2
 math_openblas_SET += AVX AVX2 INTERFACE64 OPENMP
+multimedia_mpv_SET += ZSH ALSA PULSEAUDIO
 net_mosquitto_SET += WS
 ports-mgmt_portmaster_SET += ZSH
 security_cryptopp_SET += SIMD
