--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -13,6 +13,9 @@ editors_libreoffice_SET += GTK3
 editors_vim_SET += CSCOPE CONSOLE PYTHON3
 editors_vim_UNSET += DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
 ftp_curl_SET += HTTP2 LIBSSH2
+lang_erlang_SET += NATIVE
+lang_julia_SET += NATIVE
+mail_thunderbird_UNSET += JACK
 math_openblas_SET += AVX AVX2 INTERFACE64 OPENMP
 multimedia_mpv_SET += ZSH ALSA PULSEAUDIO
 net_mosquitto_SET += WS
@@ -20,6 +23,9 @@ ports-mgmt_portmaster_SET += ZSH
 security_cryptopp_SET += SIMD
 sysutils_screen_SET += SHOWENC
 sysutils_tmux_SET += BACKSPACE
+www_chromium_SET += PULSEAUDIO
+www_chromium_UNSET += KERBEROS
+www_firefox_UNSET += JACK
 
 CPUTYPE ?= native
 
