make.conf: fcitx OPENCC

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -5,6 +5,7 @@
 
 OPTIONS_UNSET += DOCS X11
 
+chinese_fcitx_SET += OPENCC
 databases_sqlite3_SET += JSON1
 devel_cmake_UNSET += MANPAGES
 devel_git_SET += PCRE2
