make.conf: rebar3

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -11,6 +11,7 @@ databases_sqlite3_SET += JSON1
 devel_cmake_UNSET += MANPAGES
 devel_git_SET += PCRE2
 devel_git_UNSET = CONTRIB CVS GITWEB SEND_EMAIL P4 ETCSHELLS PCRE
+devel_rebar3_SET += ZSH
 editors_libreoffice_SET += GTK3
 editors_vim_SET += CSCOPE CONSOLE PYTHON3
 editors_vim_UNSET += DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
