make.conf: wget

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -5,8 +5,8 @@
 
 OPTIONS_UNSET += DOCS X11
 
-audio_alsa-plugins_SET += FFMPEG PULSEAUDIO SAMPLERATE
 accessibility_redshift_SET += GUI
+audio_alsa-plugins_SET += FFMPEG PULSEAUDIO SAMPLERATE
 chinese_fcitx_SET += OPENCC
 databases_sqlite3_SET += JSON1
 devel_cmake_UNSET += MANPAGES
@@ -17,6 +17,7 @@ editors_libreoffice_SET += GTK3
 editors_vim_SET += CSCOPE CONSOLE PYTHON3
 editors_vim_UNSET += DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
 ftp_curl_SET += HTTP2 LIBSSH2
+ftp_wget_SET += PCRE
 lang_erlang_SET += NATIVE
 lang_julia_SET += NATIVE
 mail_thunderbird_UNSET += JACK
