freebsd/make.conf: net/remmina

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -24,6 +24,7 @@ mail_thunderbird_UNSET += JACK
 math_openblas_SET += AVX AVX2 INTERFACE64 OPENMP
 multimedia_mpv_SET += ZSH ALSA PULSEAUDIO
 net_mosquitto_SET += WS
+net_remmina_UNSET += AVAHI
 ports-mgmt_portmaster_SET += ZSH
 security_cryptopp_SET += SIMD
 sysutils_screen_SET += SHOWENC
