--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -23,6 +23,8 @@ lang_julia_SET += NATIVE
 mail_thunderbird_UNSET += JACK
 math_openblas_SET += AVX AVX2 INTERFACE64 OPENMP
 multimedia_mpv_SET += ZSH ALSA PULSEAUDIO
+net_libwebsockets_SET += LIBEV LIBUV PLUGINS UNIX_SOCK WEBSERVER
+net_mosquitto_UNSET += IPV6
 net_mosquitto_SET += WS
 net_remmina_UNSET += AVAHI
 ports-mgmt_portmaster_SET += ZSH
@@ -31,6 +33,7 @@ sysutils_screen_SET += SHOWENC
 www_chromium_SET += PULSEAUDIO
 www_chromium_UNSET += KERBEROS
 www_firefox_UNSET += JACK
+net_freerdp_SET += PULSEAUDIO FFMPEG
 
 CPUTYPE ?= native
 
