--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -15,7 +15,7 @@ devel_git_UNSET = CONTRIB CVS GITWEB SEND_EMAIL P4 ETCSHELLS PCRE
 devel_rebar3_SET += ZSH
 editors_libreoffice_SET += GTK3
 editors_vim_SET += CSCOPE CONSOLE PYTHON3
-editors_vim_UNSET += DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2
+editors_vim_UNSET += DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2 GTK3
 ftp_curl_SET += HTTP2 LIBSSH2
 ftp_wget_SET += PCRE
 lang_erlang_SET += NATIVE
@@ -24,6 +24,7 @@ mail_thunderbird_UNSET += JACK
 math_openblas_SET += AVX AVX2 INTERFACE64 OPENMP
 multimedia_mpv_SET += ZSH ALSA PULSEAUDIO
 net_libwebsockets_SET += LIBEV LIBUV PLUGINS UNIX_SOCK WEBSERVER
+net_libwebsockets_UNSET += IPV6
 net_mosquitto_UNSET += IPV6
 net_mosquitto_SET += WS
 net_remmina_UNSET += AVAHI
