fbsd/make.conf: www/node

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -34,6 +34,7 @@ sysutils_screen_SET += SHOWENC
 www_chromium_SET += PULSEAUDIO
 www_chromium_UNSET += KERBEROS
 www_firefox_UNSET += JACK
+www_node_SET += BUNDLED_SSL
 net_freerdp_SET += PULSEAUDIO FFMPEG
 
 CPUTYPE ?= native
