freebsd/make.conf: www/seamonkey

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -36,6 +36,8 @@ www_chromium_SET += PULSEAUDIO
 www_chromium_UNSET += KERBEROS
 www_firefox_UNSET += JACK
 www_node_SET += BUNDLED_SSL
+www_seamonkey_SET += RUST
+www_seamonkey_UNSET += LDAP ALSA JACK
 
 CPUTYPE ?= native
 MALLOC_PRODUCTION = yes
