freebsd/make.conf: mail/mutt

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -20,6 +20,7 @@ ftp_curl_SET += HTTP2 LIBSSH2
 ftp_wget_SET += PCRE
 lang_erlang_SET += NATIVE
 lang_julia_SET += DEBUG NATIVE
+mail_mutt_UNSET += EXAMPLES HTML XML
 mail_thunderbird_UNSET += JACK
 math_openblas_SET += AVX AVX2 INTERFACE64 OPENMP
 multimedia_mpv_SET += ZSH ALSA PULSEAUDIO
