make.conf: lang/julia OPENLIBM

--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -19,7 +19,8 @@ editors_vim_UNSET += DEFAULT_VIMRC NLS RUBY PERL TCL LUA GTK2 GTK3
 ftp_curl_SET += HTTP2 LIBSSH2
 ftp_wget_SET += PCRE
 lang_erlang_SET += NATIVE
-lang_julia_SET += DEBUG NATIVE
+lang_julia_SET += DEBUG NATIVE OPENLIBM
+lang_julia_UNSET += SYSLIBM
 mail_mutt_UNSET += EXAMPLES HTML XML
 mail_thunderbird_UNSET += JACK
 math_openblas_SET += AVX AVX2 INTERFACE64 OPENMP
