tmux: migrate config

--- a/.tmux-inner.conf
+++ b/.tmux-inner.conf
@@ -31,9 +31,7 @@ bind-key -r k        next-window
 bind-key -r C-k      next-window
 
 # status bar
-set -g status-fg colour15 # bold white
-set -g status-bg colour240 # gray
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg colour10
+set -g status-style fg=colour15,bg=colour240  # colour15=bold white, colour240=gray
+set-window-option -g window-status-current-style fg=black,bg=colour10
 set -g status-right "#[fg=yellow,bold]#S#[default]#[fg=white,bold]@#h #[fg=green,bold]#(uptime | sed -e 's/^.*average.*: //' -e 's/,//g' | awk '{ print $1 }')"
 set -g status-interval 1
