--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,9 +36,7 @@ set -g window-status-format "#I:#W"
 set -g status-bg colour10
 
 # current window status bar
-set-window-option -g window-status-current-fg green
-set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-attr underscore
+set-window-option -g window-status-current-style fg=green,bg=black,underscore
 set -g window-status-current-format "#I #W"
 
 # status line
