--- a/freebsd/etc/make.conf
+++ b/freebsd/etc/make.conf
@@ -3,7 +3,7 @@
 #
 # MAKE_JOBS_NUMBER ?= 10
 
-OPTIONS_UNSET += DOCS X11
+OPTIONS_UNSET += DOCS
 
 accessibility_redshift_SET += GUI
 audio_alsa-plugins_SET += FFMPEG PULSEAUDIO SAMPLERATE
