archive tmux deluge

--- a/.tmux.deluge.conf
+++ b/.tmux.deluge.conf
@@ -15,21 +15,21 @@ send-keys -t 1 "/home/iblis/venv/deluge/bin/python /home/iblis/code/deluge/dclie
 
 # rm-tor
 select-window -t 1
-split-window -h -t 1
+# split-window -h -t 1
 send-keys -t 0 "/home/iblis/venv/deluge/bin/python /home/iblis/code/deluge/del.py" Enter
 select-pane -t 0
 
 
 # page 2: lots of daemon
 select-window -t 2
-split-window -h -t 2
-split-window -h -t 2
+# split-window -h -t 2
+# split-window -h -t 2
 
 send-keys -t 0 "cd /home/iblis/code/deluge" Enter
 send-keys -t 0 "/home/iblis/venv/deluge/bin/python ./feedly.py" Enter
 
-send-keys -t 2 "cd /home/iblis/code/deluge" Enter
-send-keys -t 2 "/home/iblis/venv/deluge/bin/python ./chr_server.py" Enter
+# send-keys -t 2 "cd /home/iblis/code/deluge" Enter
+# send-keys -t 2 "/home/iblis/venv/deluge/bin/python ./chr_server.py" Enter
 
 # page 4
 select-window -t 4
