--- a/ap/hostapd.conf
+++ b/ap/hostapd.conf
@@ -1,10 +1,11 @@
 #
-# sudo ifconfig wlp0s20f0u2u2 inet 192.168.42.1
+# sudo ifconfig wlp0s20f0u1u2 inet 192.168.42.1
 # sudo systemctl start dnsmasq.service
 # sudo hostapd ./hostapd.conf
 #
 #Set wireless interface
-interface=wlp0s20f0u2u2
+interface=wlp0s20f0u1u2
+country_code=TW
 #Set network name
 ssid=prosciutto
 #Set channel
@@ -14,9 +15,12 @@ driver=nl80211
 
 hw_mode=a
 
+ieee80211d=1
 ieee80211n=1
 ieee80211ac=1
 wmm_enabled=1
+
+logger_stdout_level=0
 
 auth_algs=1
 wpa=2
